--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -17,4 +17,5 @@
       <h3>{{ favorite.temp | number : "1.0-0" }} °C</h3>
     </div>
   </div>
+  <button type="button" (click)="handleDeleteFavoriteBtn()">Clear All</button>
 </div>
