--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -66,7 +66,8 @@
       <p>
         The skies will be mostly
         {{ weather.desc }}. the high will be
-        {{ weather.feelLike | number : "1.0-0" }} on this very humid day
+        {{ weather.feelLike | number : "1.0-0" }}<sup>°</sup> on this very humid
+        day
       </p>
     </span>
 
