--- a/src/app/current-weather/current-weather.component.css
+++ b/src/app/current-weather/current-weather.component.css
@@ -1,5 +1,5 @@
 :root {
-  --color-primary: #6741d9;
+  --color-primary:  #e0b731
   --color-primary-light: #7950f2;
   --color-text: #dee2e6;
   --color-text-dark: #adb5bd;
@@ -50,7 +50,7 @@ section {
 
 .weather-status {
   display: flex;
-  gap: 6px;
+  gap: 20px;
   align-items: center;
 }
 .weather-status img {
@@ -116,20 +116,20 @@ section {
 }
 
 .current .favorite {
-  border: 1px solid #6741d9;
+  border: 1px solid #e0b731;
   width: 30px;
   height: 30px;
-  color: var(--color-primary);
+  color:  #e0b731;
   border-radius: 50%;
   padding: 5px;
   cursor: pointer;
 }
 
 .current .favorite-active {
-  border: 1px solid #6741d9;
+  border: 1px solid #e0b731;
   width: 30px;
   height: 30px;
-  color: #7950f2;
+  color: #e0b731;
   border-radius: 50%;
   padding: 5px;
   cursor: pointer;
